# examples

./: .gitignore  README.md
Casa-IoT-keras/: Dockerfile  README.md  client.yaml  create_data_partitions.py  docker-compose.yaml  extra-hosts.yaml  generate_clients.sh  private-network.yaml  requirements.txt
Casa-IoT-keras/client/: init_model.py  read_data.py  requirements.txt  settings.yaml  train.py  validate.py
Casa-IoT-keras/initial_model/: initial_model.npz
how-tos/fedn-native-pseudo-distributed/: README.md
how-tos/start-native-fedn-client/: README.md
imdb-keras/: .gitignore  Dockerfile  README.md  client.yaml  create_data_partitions.py  docker-compose-clients.yaml  docker-compose.yaml  extra-hosts.yaml  requirements.txt
imdb-keras/client/: init_model.py  read_data.py  requirements.txt  train.py  validate.py
imdb-keras/predict/: README.md  app.py  (+2 more)
mnist-cpp/: .dockerignore  .env  .gitignore  .hadolint.yaml  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  environment.yaml  fedn.yaml  main.cpp  metric.json  net.h  test.ipynb  train.cpp  validate.cpp
mnist-cpp/.devcontainer/: Dockerfile  devcontainer.json  devcontainer.json.tpl
mnist-cpp/client/: fedn.yaml  helper.py  sgx-setup.sh  train.manifest.template  train.sh  validate.manifest.template  validate.sh
mnist-cpp/config/: settings-client.yaml  settings-combiner.yaml  settings-reducer.yaml
mnist-keras/: Dockerfile  README.md  client.yaml  create_data_partitions.py  docker-compose.yaml  private-network.yaml  requirements.txt
mnist-pytorch/: Dockerfile  README.md  docker-compose.yaml
(+42 files in other folders)
